# Chat-pp

./: CMakeLists.txt
.github/workflows/: deploy-apps.yml
apps/client/: CMakeLists.txt
apps/client/src/: main.cpp
apps/client/src/client/: client.cpp  client.h  main.cpp  ui.cpp  ui.h
apps/server/: CMakeLists.txt
apps/server/src/: main.cpp
libs/: CMakeLists.txt
libs/common_lib/: CMakeLists.txt
libs/common_lib/include/common_lib/: common_lib.h
libs/json_struct/: CMakeLists.txt
libs/json_struct/include/json_struct/: json_struct.h
libs/nlohmann/: CMakeLists.txt
